--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@t3-oss/env-nextjs": "^0.12.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "framer-motion": "^12.9.2",
     "lucide-react": "^0.503.0",
     "next": "^15.2.3",
     "react": "^19.0.0",
