--- a/.env.example
+++ b/.env.example
@@ -11,7 +11,7 @@
 
 # Prisma
 # https://www.prisma.io/docs/reference/database-reference/connection-urls#env
-DATABASE_URL="postgresql://postgres:password@localhost:5432/sketchy"
+DATABASE_URL="postgresql://postgres:password@localhost:5432/saas-starter"
 NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=
 CLERK_SECRET_KEY=
 NEXT_PUBLIC_CLERK_SIGN_IN_URL=/auth/sign-in
